# cachecontrol

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
cachecontrol/: serialize.py
cacheyou/: __init__.py  adapter.py  cache.py  compat.py  controller.py  filewrapper.py  heuristics.py  serialize.py
cacheyou/caches/: file_cache.py  redis_cache.py
docs/: Makefile  conf.py  release_notes.rst
examples/: benchmark.py
tests/: conftest.py  test_adapter.py  test_cache_control.py  test_chunked_response.py  test_etag.py  test_expires_heuristics.py  test_max_age.py  test_redirects.py  test_regressions.py  test_serialization.py  test_storage_filecache.py  test_storage_redis.py  test_vary.py
